--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,5 +2,23 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: left;
+}
+
+button {
+  padding: 10px;
+  margin-right: 10px;
+  font-family: 'Courier New';
+  font-size: 25px;
+  background-color: transparent;
+}
+
+button:hover {
+  background-color: #eee;
+}
+
+input {
+  padding: 10px;
+  font-family: 'Courier New';
+  font-size: 20px;
 }
