--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Courier New', monospace;
+  font-size: 25px;
+
+  background: #fffdf7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
