--- a/client/src/References.css
+++ b/client/src/References.css
@@ -1,6 +1,7 @@
 .references {
-  font-family: Arial, sans-serif;
+  /* font-family: Arial, sans-serif;*/
   line-height: 1.5;
+  font-size: 15px;
 }
 
 .reference {
