--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'Courier New', monospace;
+  font-family: "Courier New", monospace;
   font-size: 25px;
 
   background: #fffdf7;
