--- a/client/src/Quiz.css
+++ b/client/src/Quiz.css
@@ -116,7 +116,7 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: #faf8f5;
   border: 2px solid #888;
   padding: 24px;
   z-index: 1000;
